cmd/redirect-outgoing/service-envoy.yaml
node:
  id: "id_identity"
  cluster: "cluster_identity"
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 4999
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                idle_timeout: 1s
                codec_type: auto
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: "/tmp/envoy-access-4999.log"
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: http_default
                http_filters:
                  - name: envoy.router
                    typed_config: {}
#      listener_filters:
#        - name: envoy.listener.original_dst
#          typed_config: {}
      use_original_dst: true
    - name: listener_1
      address:
        socket_address: { address: 0.0.0.0, port_value: 8443 }
      filter_chains:
        - filters:
            - name: envoy.tcp_proxy
              config:
                stat_prefix: ingress_https
                cluster: tcp_default
      use_original_dst: true
#      listener_filters:
#        - name: envoy.listener.original_dst
#          typed_config: {}
  clusters:
    - name: http_default
      type: ORIGINAL_DST
      connect_timeout: 6s
      lb_policy: ORIGINAL_DST_LB
      dns_lookup_family: V4_ONLY
    - name: tcp_default
      connect_timeout: 6s
      type: ORIGINAL_DST
      lb_policy: ORIGINAL_DST_LB
      dns_lookup_family: V4_ONLY
cluster_manager: {}
watchdog: {}
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 19000
